TX-Mizzou update

--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-27 20:49:44</em></div>
-<div class="line"><em>Last bowl scored:  New Era Pinstripe Bowl (Iowa vs. Boston College)</em></div>
+<div class="line"><em>Last updated:  2017-12-28 00:31:57</em></div>
+<div class="line"><em>Last bowl scored:  Texas Bowl (Missouri vs. Texas)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 18.5</div>
-<div class="line">2. Still a Beaver Believer 16.75</div>
-<div class="line">2. The Water and The Well 16.75</div>
-<div class="line">4. Jake and the Neverland Pirates 16.5</div>
-<div class="line">4. Trojans 16.5</div>
-<div class="line">6. War Eagle 16.25</div>
-<div class="line">7. War Beaver 15.75</div>
-<div class="line">8. 4 Rackets 15.5</div>
-<div class="line">8. Cowboy 15.5</div>
-<div class="line">8. I lost the password to my first bracket 15.5</div>
-<div class="line">11. Bevo's Best 15.25</div>
-<div class="line">12. <strong>Bumblerooski 15.0</strong></div>
-<div class="line">12. Superman 15.0</div>
-<div class="line">12. The Pick Doctor 15.0</div>
-<div class="line">15. Bobbo 14.75</div>
-<div class="line">16. Santa Cruz Bill 14.5</div>
-<div class="line">16. Yoda 14.5</div>
-<div class="line">18. Juul 14.25</div>
-<div class="line">19. beach lady 14.0</div>
-<div class="line">20. Coog Crew 13.75</div>
-<div class="line">20. Godiva Nine! 13.75</div>
-<div class="line">20. <strong>Nerf Herder 13.75</strong></div>
-<div class="line">23. Winning Jeff 13.25</div>
-<div class="line">24. Katyusha 13.0</div>
-<div class="line">24. Make Bowl Season Great Again 13.0</div>
-<div class="line">24. Pepper Bear 13.0</div>
-<div class="line">24. Sorbet 13.0</div>
-<div class="line">24. <strong>Static 13.0</strong></div>
-<div class="line">24. <strong>Thunder 13.0</strong></div>
-<div class="line">24. UrbranLegend 13.0</div>
-<div class="line">31. MidWestWheat 12.75</div>
-<div class="line">31. OSUX3 12.75</div>
-<div class="line">33. Josh's Bracket 12.5</div>
-<div class="line">33. Pooh Bear 12.5</div>
-<div class="line">33. Putin's Dog 12.5</div>
-<div class="line">36. Bay City Rollers 12.25</div>
-<div class="line">36. Brothers before others 12.25</div>
-<div class="line">38. <strong>#MamaBear 12.0</strong></div>
-<div class="line">38. Assistant Coach Riley? 12.0</div>
-<div class="line">38. <strong>Lightning 12.0</strong></div>
-<div class="line">41. Adrian A 11.75</div>
-<div class="line">41. <strong>Eclipse 11.75</strong></div>
-<div class="line">43. Maui Girl 11.5</div>
-<div class="line">43. Tucker 11.5</div>
-<div class="line">45. Texas Big Red 11.25</div>
-<div class="line">46. cutie pie 11.0</div>
-<div class="line">46. Rapacke's Bracket 11.0</div>
-<div class="line">46. The Striker 11.0</div>
-<div class="line">49. Go For Bones 10.75</div>
-<div class="line">50. Kevin's bracket 10.5</div>
-<div class="line">50. Luck be a lady 10.5</div>
-<div class="line">50. Nurse Ratched 10.5</div>
-<div class="line">53. Escalante 10.0</div>
-<div class="line">54. Blindhog2017 9.75</div>
-<div class="line">54. Sgt. Pepper 9.75</div>
-<div class="line">54. Swampdonkey 9.75</div>
-<div class="line">54. Victorious Secret 9.75</div>
-<div class="line">54. West Coast Bias 9.75</div>
-<div class="line">59. Blind Dog's Bluff 9.5</div>
-<div class="line">59. <strong>D-Bo 9.5</strong></div>
-<div class="line">59. Duke Rules 9.5</div>
-<div class="line">59. Julez 9.5</div>
-<div class="line">59. YOLO Pups 9.5</div>
-<div class="line">64. Batman 9.0</div>
-<div class="line">64. <strong>Em214 9.0</strong></div>
-<div class="line">64. Go For Broke 9.0</div>
-<div class="line">67. Santa's Helper 8.5</div>
-<div class="line">68. Lucky in 2018 8.25</div>
-<div class="line">69. hapagirl 8.0</div>
-<div class="line">70. Warren Mooned Me 7.25</div>
-<div class="line">71. <strong>GlamKam 7.0</strong></div>
+<div class="line">1. Clutch City 19.75</div>
+<div class="line">2. The Water and The Well 19.25</div>
+<div class="line">3. Cowboy 18.0</div>
+<div class="line">4. Jake and the Neverland Pirates 17.75</div>
+<div class="line">4. Trojans 17.75</div>
+<div class="line">6. <strong>Bumblerooski 17.5</strong></div>
+<div class="line">6. Superman 17.5</div>
+<div class="line">6. War Eagle 17.5</div>
+<div class="line">9. Santa Cruz Bill 17.0</div>
+<div class="line">9. War Beaver 17.0</div>
+<div class="line">11. 4 Rackets 16.75</div>
+<div class="line">11. I lost the password to my first bracket 16.75</div>
+<div class="line">11. Juul 16.75</div>
+<div class="line">11. Still a Beaver Believer 16.75</div>
+<div class="line">15. Bevo's Best 16.5</div>
+<div class="line">16. <strong>Nerf Herder 16.25</strong></div>
+<div class="line">16. The Pick Doctor 16.25</div>
+<div class="line">18. Bobbo 16.0</div>
+<div class="line">19. Yoda 15.75</div>
+<div class="line">20. Make Bowl Season Great Again 15.5</div>
+<div class="line">20. UrbranLegend 15.5</div>
+<div class="line">22. beach lady 15.25</div>
+<div class="line">23. Godiva Nine! 15.0</div>
+<div class="line">23. Pooh Bear 15.0</div>
+<div class="line">25. <strong>#MamaBear 14.25</strong></div>
+<div class="line">25. <strong>Eclipse 14.25</strong></div>
+<div class="line">25. Katyusha 14.25</div>
+<div class="line">28. MidWestWheat 14.0</div>
+<div class="line">28. OSUX3 14.0</div>
+<div class="line">30. Coog Crew 13.75</div>
+<div class="line">30. Putin's Dog 13.75</div>
+<div class="line">32. Assistant Coach Riley? 13.25</div>
+<div class="line">32. <strong>Lightning 13.25</strong></div>
+<div class="line">32. Winning Jeff 13.25</div>
+<div class="line">35. Adrian A 13.0</div>
+<div class="line">35. Luck be a lady 13.0</div>
+<div class="line">35. Pepper Bear 13.0</div>
+<div class="line">35. Sorbet 13.0</div>
+<div class="line">35. <strong>Static 13.0</strong></div>
+<div class="line">35. <strong>Thunder 13.0</strong></div>
+<div class="line">41. Maui Girl 12.75</div>
+<div class="line">41. Tucker 12.75</div>
+<div class="line">43. Josh's Bracket 12.5</div>
+<div class="line">43. Texas Big Red 12.5</div>
+<div class="line">45. Bay City Rollers 12.25</div>
+<div class="line">45. Brothers before others 12.25</div>
+<div class="line">45. cutie pie 12.25</div>
+<div class="line">45. Sgt. Pepper 12.25</div>
+<div class="line">45. Swampdonkey 12.25</div>
+<div class="line">50. Duke Rules 12.0</div>
+<div class="line">50. Go For Bones 12.0</div>
+<div class="line">52. <strong>D-Bo 11.75</strong></div>
+<div class="line">52. Kevin's bracket 11.75</div>
+<div class="line">52. Nurse Ratched 11.75</div>
+<div class="line">55. Escalante 11.25</div>
+<div class="line">56. Blindhog2017 11.0</div>
+<div class="line">56. Rapacke's Bracket 11.0</div>
+<div class="line">56. The Striker 11.0</div>
+<div class="line">56. Victorious Secret 11.0</div>
+<div class="line">56. West Coast Bias 11.0</div>
+<div class="line">61. Blind Dog's Bluff 10.75</div>
+<div class="line">61. Julez 10.75</div>
+<div class="line">61. YOLO Pups 10.75</div>
+<div class="line">64. hapagirl 10.5</div>
+<div class="line">65. Batman 10.25</div>
+<div class="line">65. Go For Broke 10.25</div>
+<div class="line">67. Santa's Helper 9.75</div>
+<div class="line">68. <strong>GlamKam 9.5</strong></div>
+<div class="line">68. Lucky in 2018 9.5</div>
+<div class="line">70. <strong>Em214 9.0</strong></div>
+<div class="line">71. Warren Mooned Me 8.5</div>
 </div>
 </div>
 </body>
