--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-28 00:31:52</em></div>
-<div class="line"><em>Last bowl scored:  Texas Bowl (Missouri vs. Texas)</em></div>
+<div class="line"><em>Last updated:  2017-12-28 16:38:06</em></div>
+<div class="line"><em>Last bowl scored:  Military Bowl (Virginia vs. Navy)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bumblerooski 22.25</strong></div>
-<div class="line">2. Clutch City 19.75</div>
-<div class="line">3. The Water and The Well 19.25</div>
-<div class="line">4. Cowboy 18.0</div>
-<div class="line">5. Jake and the Neverland Pirates 17.75</div>
-<div class="line">5. Trojans 17.75</div>
-<div class="line">7. Superman 17.5</div>
-<div class="line">7. War Eagle 17.5</div>
-<div class="line">9. Santa Cruz Bill 17.0</div>
-<div class="line">9. War Beaver 17.0</div>
-<div class="line">11. 4 Rackets 16.75</div>
-<div class="line">11. I lost the password to my first bracket 16.75</div>
-<div class="line">11. Juul 16.75</div>
-<div class="line">11. Still a Beaver Believer 16.75</div>
-<div class="line">15. Bevo's Best 16.5</div>
-<div class="line">16. <strong>Nerf Herder 16.25</strong></div>
-<div class="line">16. The Pick Doctor 16.25</div>
-<div class="line">18. Bobbo 16.0</div>
-<div class="line">19. Yoda 15.75</div>
-<div class="line">20. Make Bowl Season Great Again 15.5</div>
-<div class="line">20. UrbranLegend 15.5</div>
-<div class="line">22. beach lady 15.25</div>
-<div class="line">23. Godiva Nine! 15.0</div>
-<div class="line">23. Pooh Bear 15.0</div>
-<div class="line">25. <strong>#MamaBear 14.25</strong></div>
-<div class="line">25. <strong>Eclipse 14.25</strong></div>
-<div class="line">25. Katyusha 14.25</div>
-<div class="line">28. MidWestWheat 14.0</div>
-<div class="line">28. OSUX3 14.0</div>
-<div class="line">30. Coog Crew 13.75</div>
-<div class="line">30. Putin's Dog 13.75</div>
-<div class="line">32. Assistant Coach Riley? 13.25</div>
-<div class="line">32. <strong>Lightning 13.25</strong></div>
-<div class="line">32. Winning Jeff 13.25</div>
-<div class="line">35. Adrian A 13.0</div>
-<div class="line">35. Luck be a lady 13.0</div>
-<div class="line">35. Pepper Bear 13.0</div>
-<div class="line">35. Sorbet 13.0</div>
-<div class="line">35. <strong>Static 13.0</strong></div>
-<div class="line">35. <strong>Thunder 13.0</strong></div>
-<div class="line">41. Maui Girl 12.75</div>
-<div class="line">41. Tucker 12.75</div>
-<div class="line">43. Josh's Bracket 12.5</div>
-<div class="line">43. Texas Big Red 12.5</div>
-<div class="line">45. Bay City Rollers 12.25</div>
-<div class="line">45. Brothers before others 12.25</div>
-<div class="line">45. cutie pie 12.25</div>
-<div class="line">45. Sgt. Pepper 12.25</div>
-<div class="line">45. Swampdonkey 12.25</div>
-<div class="line">50. Duke Rules 12.0</div>
-<div class="line">50. Go For Bones 12.0</div>
-<div class="line">52. <strong>D-Bo 11.75</strong></div>
-<div class="line">52. Kevin's bracket 11.75</div>
-<div class="line">52. Nurse Ratched 11.75</div>
-<div class="line">55. Escalante 11.25</div>
-<div class="line">56. Blindhog2017 11.0</div>
-<div class="line">56. Rapacke's Bracket 11.0</div>
-<div class="line">56. The Striker 11.0</div>
-<div class="line">56. Victorious Secret 11.0</div>
-<div class="line">56. West Coast Bias 11.0</div>
-<div class="line">61. Blind Dog's Bluff 10.75</div>
-<div class="line">61. Julez 10.75</div>
-<div class="line">61. YOLO Pups 10.75</div>
-<div class="line">64. hapagirl 10.5</div>
-<div class="line">65. Batman 10.25</div>
-<div class="line">65. Go For Broke 10.25</div>
-<div class="line">67. Santa's Helper 9.75</div>
-<div class="line">68. <strong>GlamKam 9.5</strong></div>
-<div class="line">68. Lucky in 2018 9.5</div>
-<div class="line">70. <strong>Em214 9.0</strong></div>
-<div class="line">71. Warren Mooned Me 8.5</div>
+<div class="line">1. <strong>Bumblerooski 23.25</strong></div>
+<div class="line">2. Clutch City 20.75</div>
+<div class="line">3. The Water and The Well 20.25</div>
+<div class="line">4. Cowboy 19.0</div>
+<div class="line">5. Jake and the Neverland Pirates 18.75</div>
+<div class="line">5. Trojans 18.75</div>
+<div class="line">7. Superman 18.5</div>
+<div class="line">8. Santa Cruz Bill 18.0</div>
+<div class="line">9. 4 Rackets 17.75</div>
+<div class="line">9. Juul 17.75</div>
+<div class="line">9. Still a Beaver Believer 17.75</div>
+<div class="line">12. War Eagle 17.5</div>
+<div class="line">13. Bobbo 17.0</div>
+<div class="line">13. War Beaver 17.0</div>
+<div class="line">15. I lost the password to my first bracket 16.75</div>
+<div class="line">15. Yoda 16.75</div>
+<div class="line">17. Bevo's Best 16.5</div>
+<div class="line">17. Make Bowl Season Great Again 16.5</div>
+<div class="line">17. UrbranLegend 16.5</div>
+<div class="line">20. Katyusha 16.25</div>
+<div class="line">20. <strong>Nerf Herder 16.25</strong></div>
+<div class="line">20. The Pick Doctor 16.25</div>
+<div class="line">23. Godiva Nine! 16.0</div>
+<div class="line">23. Pooh Bear 16.0</div>
+<div class="line">25. <strong>#MamaBear 15.25</strong></div>
+<div class="line">25. beach lady 15.25</div>
+<div class="line">25. <strong>Eclipse 15.25</strong></div>
+<div class="line">28. MidWestWheat 15.0</div>
+<div class="line">28. OSUX3 15.0</div>
+<div class="line">30. Coog Crew 14.75</div>
+<div class="line">30. Putin's Dog 14.75</div>
+<div class="line">32. <strong>Lightning 14.25</strong></div>
+<div class="line">33. Adrian A 14.0</div>
+<div class="line">33. <strong>Thunder 14.0</strong></div>
+<div class="line">35. Maui Girl 13.75</div>
+<div class="line">35. Tucker 13.75</div>
+<div class="line">37. Texas Big Red 13.5</div>
+<div class="line">38. Assistant Coach Riley? 13.25</div>
+<div class="line">38. Bay City Rollers 13.25</div>
+<div class="line">38. cutie pie 13.25</div>
+<div class="line">38. Sgt. Pepper 13.25</div>
+<div class="line">38. Swampdonkey 13.25</div>
+<div class="line">38. Winning Jeff 13.25</div>
+<div class="line">44. Go For Bones 13.0</div>
+<div class="line">44. Luck be a lady 13.0</div>
+<div class="line">44. Pepper Bear 13.0</div>
+<div class="line">44. Rapacke's Bracket 13.0</div>
+<div class="line">44. Sorbet 13.0</div>
+<div class="line">44. <strong>Static 13.0</strong></div>
+<div class="line">50. Blind Dog's Bluff 12.75</div>
+<div class="line">50. <strong>D-Bo 12.75</strong></div>
+<div class="line">50. Nurse Ratched 12.75</div>
+<div class="line">53. Josh's Bracket 12.5</div>
+<div class="line">54. Brothers before others 12.25</div>
+<div class="line">54. Escalante 12.25</div>
+<div class="line">56. Blindhog2017 12.0</div>
+<div class="line">56. Duke Rules 12.0</div>
+<div class="line">56. Victorious Secret 12.0</div>
+<div class="line">56. West Coast Bias 12.0</div>
+<div class="line">60. Kevin's bracket 11.75</div>
+<div class="line">61. Batman 11.25</div>
+<div class="line">61. Go For Broke 11.25</div>
+<div class="line">63. The Striker 11.0</div>
+<div class="line">64. Julez 10.75</div>
+<div class="line">64. Santa's Helper 10.75</div>
+<div class="line">64. YOLO Pups 10.75</div>
+<div class="line">67. <strong>GlamKam 10.5</strong></div>
+<div class="line">67. hapagirl 10.5</div>
+<div class="line">67. Lucky in 2018 10.5</div>
+<div class="line">70. Warren Mooned Me 9.5</div>
+<div class="line">71. <strong>Em214 9.0</strong></div>
 </div>
 </div>
 </body>
