--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -2139,81 +2139,158 @@ ul.auto-toc {
 <td>1.25</td>
 <td>1.25</td>
 </tr>
+<tr><td>22</td>
+<td>Military Bowl</td>
+<td>Virginia</td>
+<td>Navy</td>
+<td>1.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>14.25</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>13.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>14.0</strong></td>
 <td><strong>13.25</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>12.25</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>13.25</strong></td>
 <td><strong>15.25</strong></td>
 <td><strong>16.5</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>12.75</strong></td>
 <td><strong>12.0</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>15.25</strong></td>
 <td><strong>9.0</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>13.0</strong></td>
 <td><strong>11.25</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>15.0</strong></td>
+<td><strong>16.0</strong></td>
 <td><strong>10.5</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>17.75</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>12.5</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>11.75</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>10.75</strong></td>
 <td><strong>13.25</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>19.25</strong></td>
 <td><strong>13.0</strong></td>
 <td><strong>17.75</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>15.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>11.0</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>12.0</strong></td>
 <td><strong>17.0</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>11.0</strong></td>
+<td><strong>9.5</strong></td>
+<td><strong>12.0</strong></td>
 <td><strong>13.25</strong></td>
-<td><strong>15.75</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>10.75</strong></td>
 </tr>
 </tbody>
