--- a/bowl_pool/test/2017-2018/rankings.html
+++ b/bowl_pool/test/2017-2018/rankings.html
@@ -364,80 +364,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-28 16:38:06</em></div>
-<div class="line"><em>Last bowl scored:  Military Bowl (Virginia vs. Navy)</em></div>
+<div class="line"><em>Last updated:  2017-12-28 20:30:52</em></div>
+<div class="line"><em>Last bowl scored:  Camping World Bowl (Oklahoma State vs. Virginia Tech)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bumblerooski 23.25</strong></div>
-<div class="line">2. Clutch City 20.75</div>
-<div class="line">3. The Water and The Well 20.25</div>
-<div class="line">4. Cowboy 19.0</div>
-<div class="line">5. Jake and the Neverland Pirates 18.75</div>
-<div class="line">5. Trojans 18.75</div>
-<div class="line">7. Superman 18.5</div>
-<div class="line">8. Santa Cruz Bill 18.0</div>
-<div class="line">9. 4 Rackets 17.75</div>
-<div class="line">9. Juul 17.75</div>
-<div class="line">9. Still a Beaver Believer 17.75</div>
-<div class="line">12. War Eagle 17.5</div>
-<div class="line">13. Bobbo 17.0</div>
-<div class="line">13. War Beaver 17.0</div>
-<div class="line">15. I lost the password to my first bracket 16.75</div>
-<div class="line">15. Yoda 16.75</div>
-<div class="line">17. Bevo's Best 16.5</div>
-<div class="line">17. Make Bowl Season Great Again 16.5</div>
-<div class="line">17. UrbranLegend 16.5</div>
-<div class="line">20. Katyusha 16.25</div>
-<div class="line">20. <strong>Nerf Herder 16.25</strong></div>
-<div class="line">20. The Pick Doctor 16.25</div>
-<div class="line">23. Godiva Nine! 16.0</div>
-<div class="line">23. Pooh Bear 16.0</div>
-<div class="line">25. <strong>#MamaBear 15.25</strong></div>
-<div class="line">25. beach lady 15.25</div>
-<div class="line">25. <strong>Eclipse 15.25</strong></div>
-<div class="line">28. MidWestWheat 15.0</div>
-<div class="line">28. OSUX3 15.0</div>
-<div class="line">30. Coog Crew 14.75</div>
-<div class="line">30. Putin's Dog 14.75</div>
-<div class="line">32. <strong>Lightning 14.25</strong></div>
-<div class="line">33. Adrian A 14.0</div>
-<div class="line">33. <strong>Thunder 14.0</strong></div>
-<div class="line">35. Maui Girl 13.75</div>
-<div class="line">35. Tucker 13.75</div>
-<div class="line">37. Texas Big Red 13.5</div>
-<div class="line">38. Assistant Coach Riley? 13.25</div>
-<div class="line">38. Bay City Rollers 13.25</div>
-<div class="line">38. cutie pie 13.25</div>
-<div class="line">38. Sgt. Pepper 13.25</div>
-<div class="line">38. Swampdonkey 13.25</div>
-<div class="line">38. Winning Jeff 13.25</div>
-<div class="line">44. Go For Bones 13.0</div>
-<div class="line">44. Luck be a lady 13.0</div>
-<div class="line">44. Pepper Bear 13.0</div>
-<div class="line">44. Rapacke's Bracket 13.0</div>
-<div class="line">44. Sorbet 13.0</div>
-<div class="line">44. <strong>Static 13.0</strong></div>
-<div class="line">50. Blind Dog's Bluff 12.75</div>
-<div class="line">50. <strong>D-Bo 12.75</strong></div>
-<div class="line">50. Nurse Ratched 12.75</div>
-<div class="line">53. Josh's Bracket 12.5</div>
-<div class="line">54. Brothers before others 12.25</div>
-<div class="line">54. Escalante 12.25</div>
-<div class="line">56. Blindhog2017 12.0</div>
-<div class="line">56. Duke Rules 12.0</div>
-<div class="line">56. Victorious Secret 12.0</div>
-<div class="line">56. West Coast Bias 12.0</div>
-<div class="line">60. Kevin's bracket 11.75</div>
-<div class="line">61. Batman 11.25</div>
-<div class="line">61. Go For Broke 11.25</div>
-<div class="line">63. The Striker 11.0</div>
-<div class="line">64. Julez 10.75</div>
-<div class="line">64. Santa's Helper 10.75</div>
-<div class="line">64. YOLO Pups 10.75</div>
-<div class="line">67. <strong>GlamKam 10.5</strong></div>
-<div class="line">67. hapagirl 10.5</div>
-<div class="line">67. Lucky in 2018 10.5</div>
-<div class="line">70. Warren Mooned Me 9.5</div>
+<div class="line">1. <strong>Bumblerooski 24.25</strong></div>
+<div class="line">2. Clutch City 21.75</div>
+<div class="line">3. Trojans 20.75</div>
+<div class="line">4. The Water and The Well 20.25</div>
+<div class="line">5. Cowboy 20.0</div>
+<div class="line">6. Jake and the Neverland Pirates 19.75</div>
+<div class="line">7. Superman 19.5</div>
+<div class="line">8. Santa Cruz Bill 19.0</div>
+<div class="line">9. 4 Rackets 18.75</div>
+<div class="line">10. War Eagle 18.5</div>
+<div class="line">11. Bobbo 18.0</div>
+<div class="line">12. I lost the password to my first bracket 17.75</div>
+<div class="line">12. Juul 17.75</div>
+<div class="line">12. Still a Beaver Believer 17.75</div>
+<div class="line">12. Yoda 17.75</div>
+<div class="line">16. Bevo's Best 17.5</div>
+<div class="line">16. Make Bowl Season Great Again 17.5</div>
+<div class="line">16. UrbranLegend 17.5</div>
+<div class="line">19. Katyusha 17.25</div>
+<div class="line">19. <strong>Nerf Herder 17.25</strong></div>
+<div class="line">19. The Pick Doctor 17.25</div>
+<div class="line">22. Godiva Nine! 17.0</div>
+<div class="line">22. OSUX3 17.0</div>
+<div class="line">22. War Beaver 17.0</div>
+<div class="line">25. <strong>#MamaBear 16.25</strong></div>
+<div class="line">25. beach lady 16.25</div>
+<div class="line">25. <strong>Eclipse 16.25</strong></div>
+<div class="line">28. Pooh Bear 16.0</div>
+<div class="line">29. Coog Crew 15.75</div>
+<div class="line">29. Putin's Dog 15.75</div>
+<div class="line">31. Adrian A 15.0</div>
+<div class="line">31. MidWestWheat 15.0</div>
+<div class="line">31. <strong>Thunder 15.0</strong></div>
+<div class="line">34. Maui Girl 14.75</div>
+<div class="line">34. Tucker 14.75</div>
+<div class="line">36. Texas Big Red 14.5</div>
+<div class="line">37. Assistant Coach Riley? 14.25</div>
+<div class="line">37. Bay City Rollers 14.25</div>
+<div class="line">37. cutie pie 14.25</div>
+<div class="line">37. <strong>Lightning 14.25</strong></div>
+<div class="line">37. Winning Jeff 14.25</div>
+<div class="line">42. Go For Bones 14.0</div>
+<div class="line">42. Pepper Bear 14.0</div>
+<div class="line">42. Rapacke's Bracket 14.0</div>
+<div class="line">42. Sorbet 14.0</div>
+<div class="line">46. Blind Dog's Bluff 13.75</div>
+<div class="line">47. Josh's Bracket 13.5</div>
+<div class="line">48. Brothers before others 13.25</div>
+<div class="line">48. Escalante 13.25</div>
+<div class="line">48. Sgt. Pepper 13.25</div>
+<div class="line">48. Swampdonkey 13.25</div>
+<div class="line">52. Blindhog2017 13.0</div>
+<div class="line">52. Duke Rules 13.0</div>
+<div class="line">52. Luck be a lady 13.0</div>
+<div class="line">52. <strong>Static 13.0</strong></div>
+<div class="line">52. Victorious Secret 13.0</div>
+<div class="line">52. West Coast Bias 13.0</div>
+<div class="line">58. <strong>D-Bo 12.75</strong></div>
+<div class="line">58. Kevin's bracket 12.75</div>
+<div class="line">58. Nurse Ratched 12.75</div>
+<div class="line">61. <strong>GlamKam 12.5</strong></div>
+<div class="line">62. Batman 12.25</div>
+<div class="line">62. Go For Broke 12.25</div>
+<div class="line">64. The Striker 12.0</div>
+<div class="line">65. Julez 11.75</div>
+<div class="line">65. Santa's Helper 11.75</div>
+<div class="line">65. YOLO Pups 11.75</div>
+<div class="line">68. hapagirl 11.5</div>
+<div class="line">68. Lucky in 2018 11.5</div>
+<div class="line">70. Warren Mooned Me 10.5</div>
 <div class="line">71. <strong>Em214 9.0</strong></div>
 </div>
 </div>
