TCU and MSU updates

--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-28 20:30:58</em></div>
-<div class="line"><em>Last bowl scored:  Camping World Bowl (Oklahoma State vs. Virginia Tech)</em></div>
+<div class="line"><em>Last updated:  2017-12-29 00:38:33</em></div>
+<div class="line"><em>Last bowl scored:  Holiday Bowl (Washington State vs. Michigan State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 21.75</div>
-<div class="line">2. Trojans 20.75</div>
-<div class="line">3. The Water and The Well 20.25</div>
-<div class="line">4. Cowboy 20.0</div>
-<div class="line">5. Jake and the Neverland Pirates 19.75</div>
-<div class="line">6. <strong>Bumblerooski 19.5</strong></div>
-<div class="line">6. Superman 19.5</div>
-<div class="line">8. Santa Cruz Bill 19.0</div>
-<div class="line">9. 4 Rackets 18.75</div>
-<div class="line">10. War Eagle 18.5</div>
-<div class="line">11. Bobbo 18.0</div>
-<div class="line">12. I lost the password to my first bracket 17.75</div>
-<div class="line">12. Juul 17.75</div>
-<div class="line">12. Still a Beaver Believer 17.75</div>
-<div class="line">12. Yoda 17.75</div>
-<div class="line">16. Bevo's Best 17.5</div>
-<div class="line">16. Make Bowl Season Great Again 17.5</div>
-<div class="line">16. UrbranLegend 17.5</div>
-<div class="line">19. Katyusha 17.25</div>
-<div class="line">19. <strong>Nerf Herder 17.25</strong></div>
-<div class="line">19. The Pick Doctor 17.25</div>
-<div class="line">22. Godiva Nine! 17.0</div>
-<div class="line">22. OSUX3 17.0</div>
-<div class="line">22. War Beaver 17.0</div>
-<div class="line">25. <strong>#MamaBear 16.25</strong></div>
-<div class="line">25. beach lady 16.25</div>
-<div class="line">25. <strong>Eclipse 16.25</strong></div>
-<div class="line">28. Pooh Bear 16.0</div>
-<div class="line">29. Coog Crew 15.75</div>
-<div class="line">29. Putin's Dog 15.75</div>
-<div class="line">31. Adrian A 15.0</div>
-<div class="line">31. MidWestWheat 15.0</div>
-<div class="line">31. <strong>Thunder 15.0</strong></div>
-<div class="line">34. Maui Girl 14.75</div>
-<div class="line">34. Tucker 14.75</div>
-<div class="line">36. Texas Big Red 14.5</div>
-<div class="line">37. Assistant Coach Riley? 14.25</div>
-<div class="line">37. Bay City Rollers 14.25</div>
-<div class="line">37. cutie pie 14.25</div>
-<div class="line">37. <strong>Lightning 14.25</strong></div>
-<div class="line">37. Winning Jeff 14.25</div>
-<div class="line">42. Go For Bones 14.0</div>
-<div class="line">42. Pepper Bear 14.0</div>
-<div class="line">42. Rapacke's Bracket 14.0</div>
-<div class="line">42. Sorbet 14.0</div>
-<div class="line">46. Blind Dog's Bluff 13.75</div>
-<div class="line">47. Josh's Bracket 13.5</div>
-<div class="line">48. Brothers before others 13.25</div>
-<div class="line">48. Escalante 13.25</div>
-<div class="line">48. Sgt. Pepper 13.25</div>
-<div class="line">48. Swampdonkey 13.25</div>
-<div class="line">52. Blindhog2017 13.0</div>
-<div class="line">52. Duke Rules 13.0</div>
-<div class="line">52. Luck be a lady 13.0</div>
-<div class="line">52. <strong>Static 13.0</strong></div>
-<div class="line">52. Victorious Secret 13.0</div>
-<div class="line">52. West Coast Bias 13.0</div>
-<div class="line">58. <strong>D-Bo 12.75</strong></div>
-<div class="line">58. Kevin's bracket 12.75</div>
-<div class="line">58. Nurse Ratched 12.75</div>
-<div class="line">61. <strong>GlamKam 12.5</strong></div>
-<div class="line">62. Batman 12.25</div>
-<div class="line">62. Go For Broke 12.25</div>
-<div class="line">64. The Striker 12.0</div>
-<div class="line">65. Julez 11.75</div>
-<div class="line">65. Santa's Helper 11.75</div>
-<div class="line">65. YOLO Pups 11.75</div>
-<div class="line">68. hapagirl 11.5</div>
-<div class="line">68. Lucky in 2018 11.5</div>
-<div class="line">70. Warren Mooned Me 10.5</div>
-<div class="line">71. <strong>Em214 9.0</strong></div>
+<div class="line">1. Clutch City 23.0</div>
+<div class="line">1. Trojans 23.0</div>
+<div class="line">3. The Water and The Well 22.5</div>
+<div class="line">4. Bobbo 20.25</div>
+<div class="line">4. Santa Cruz Bill 20.25</div>
+<div class="line">6. Cowboy 20.0</div>
+<div class="line">7. Jake and the Neverland Pirates 19.75</div>
+<div class="line">7. UrbranLegend 19.75</div>
+<div class="line">7. War Eagle 19.75</div>
+<div class="line">10. <strong>Bumblerooski 19.5</strong></div>
+<div class="line">10. Superman 19.5</div>
+<div class="line">12. Juul 19.0</div>
+<div class="line">13. 4 Rackets 18.75</div>
+<div class="line">13. Make Bowl Season Great Again 18.75</div>
+<div class="line">15. beach lady 18.5</div>
+<div class="line">15. Bevo's Best 18.5</div>
+<div class="line">15. <strong>Eclipse 18.5</strong></div>
+<div class="line">15. The Pick Doctor 18.5</div>
+<div class="line">19. Godiva Nine! 18.25</div>
+<div class="line">19. <strong>Nerf Herder 18.25</strong></div>
+<div class="line">21. OSUX3 18.0</div>
+<div class="line">22. I lost the password to my first bracket 17.75</div>
+<div class="line">22. Still a Beaver Believer 17.75</div>
+<div class="line">22. Yoda 17.75</div>
+<div class="line">25. <strong>#MamaBear 17.5</strong></div>
+<div class="line">25. Winning Jeff 17.5</div>
+<div class="line">27. Katyusha 17.25</div>
+<div class="line">27. Pooh Bear 17.25</div>
+<div class="line">29. Putin's Dog 17.0</div>
+<div class="line">29. War Beaver 17.0</div>
+<div class="line">31. Bay City Rollers 16.5</div>
+<div class="line">31. cutie pie 16.5</div>
+<div class="line">33. Luck be a lady 16.25</div>
+<div class="line">33. MidWestWheat 16.25</div>
+<div class="line">33. Rapacke's Bracket 16.25</div>
+<div class="line">36. Adrian A 16.0</div>
+<div class="line">36. <strong>Thunder 16.0</strong></div>
+<div class="line">36. Tucker 16.0</div>
+<div class="line">39. Coog Crew 15.75</div>
+<div class="line">39. Josh's Bracket 15.75</div>
+<div class="line">39. Maui Girl 15.75</div>
+<div class="line">42. <strong>Lightning 15.5</strong></div>
+<div class="line">43. Assistant Coach Riley? 15.25</div>
+<div class="line">43. Go For Bones 15.25</div>
+<div class="line">45. Blind Dog's Bluff 15.0</div>
+<div class="line">45. Kevin's bracket 15.0</div>
+<div class="line">45. Pepper Bear 15.0</div>
+<div class="line">45. Sorbet 15.0</div>
+<div class="line">49. <strong>GlamKam 14.75</strong></div>
+<div class="line">50. Escalante 14.5</div>
+<div class="line">50. Sgt. Pepper 14.5</div>
+<div class="line">50. Texas Big Red 14.5</div>
+<div class="line">53. Brothers before others 14.25</div>
+<div class="line">53. Duke Rules 14.25</div>
+<div class="line">53. Victorious Secret 14.25</div>
+<div class="line">56. Blindhog2017 14.0</div>
+<div class="line">56. YOLO Pups 14.0</div>
+<div class="line">58. Lucky in 2018 13.75</div>
+<div class="line">59. Batman 13.5</div>
+<div class="line">59. Go For Broke 13.5</div>
+<div class="line">61. Swampdonkey 13.25</div>
+<div class="line">61. The Striker 13.25</div>
+<div class="line">63. Santa's Helper 13.0</div>
+<div class="line">63. <strong>Static 13.0</strong></div>
+<div class="line">63. West Coast Bias 13.0</div>
+<div class="line">66. <strong>D-Bo 12.75</strong></div>
+<div class="line">66. hapagirl 12.75</div>
+<div class="line">66. Nurse Ratched 12.75</div>
+<div class="line">66. Warren Mooned Me 12.75</div>
+<div class="line">70. Julez 11.75</div>
+<div class="line">71. <strong>Em214 10.0</strong></div>
 </div>
 </div>
 </body>
