--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -2293,82 +2293,236 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>24</td>
+<td>Alamo Bowl</td>
+<td>Texas Christian (TCU)</td>
+<td>Stanford</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>25</td>
+<td>Holiday Bowl</td>
+<td>Washington State</td>
+<td>Michigan State</td>
+<td>3.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>16.25</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>16.25</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>13.25</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>14.25</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>21.75</strong></td>
+<td><strong>23.0</strong></td>
 <td><strong>15.75</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>16.5</strong></td>
 <td><strong>12.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>11.5</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>12.75</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>19.75</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>16.0</strong></td>
 <td><strong>15.75</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>19.0</strong></td>
 <td><strong>11.75</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>14.0</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>15.0</strong></td>
 <td><strong>13.0</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>19.5</strong></td>
 <td><strong>13.25</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>17.0</strong></td>
 <td><strong>18.5</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>13.0</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>14.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>17.5</strong></td>
 <td><strong>17.75</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>14.0</strong></td>
 </tr>
 </tbody>
 </table>
