Cotton bowl update

--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-29 21:41:46</em></div>
-<div class="line"><em>Last bowl scored:  Arizona Bowl (New Mexico State vs. Utah State)</em></div>
+<div class="line"><em>Last updated:  2017-12-30 08:25:24</em></div>
+<div class="line"><em>Last bowl scored:  Cotton Bowl (Ohio State vs. Southern Cal (USC))</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 25.0</div>
-<div class="line">2. The Water and The Well 24.5</div>
+<div class="line">1. Clutch City 27.0</div>
+<div class="line">2. The Water and The Well 26.5</div>
+<div class="line">3. Cowboy 24.0</div>
+<div class="line">3. Juul 24.0</div>
 <div class="line">3. Trojans 24.0</div>
-<div class="line">4. Cowboy 22.0</div>
-<div class="line">4. Juul 22.0</div>
-<div class="line">6. Jake and the Neverland Pirates 21.75</div>
-<div class="line">6. Still a Beaver Believer 21.75</div>
-<div class="line">6. UrbranLegend 21.75</div>
-<div class="line">9. beach lady 21.5</div>
-<div class="line">9. <strong>Bumblerooski 21.5</strong></div>
-<div class="line">9. Superman 21.5</div>
-<div class="line">9. The Pick Doctor 21.5</div>
-<div class="line">13. Bobbo 21.25</div>
-<div class="line">13. <strong>Nerf Herder 21.25</strong></div>
-<div class="line">13. Santa Cruz Bill 21.25</div>
-<div class="line">16. 4 Rackets 20.75</div>
-<div class="line">16. I lost the password to my first bracket 20.75</div>
-<div class="line">16. Make Bowl Season Great Again 20.75</div>
-<div class="line">16. War Eagle 20.75</div>
-<div class="line">20. <strong>Eclipse 20.5</strong></div>
-<div class="line">21. Godiva Nine! 20.25</div>
-<div class="line">22. OSUX3 20.0</div>
-<div class="line">23. Yoda 19.75</div>
-<div class="line">24. <strong>#MamaBear 19.5</strong></div>
-<div class="line">24. Bevo's Best 19.5</div>
-<div class="line">24. cutie pie 19.5</div>
-<div class="line">27. Katyusha 19.25</div>
-<div class="line">27. Luck be a lady 19.25</div>
-<div class="line">27. MidWestWheat 19.25</div>
-<div class="line">30. Putin's Dog 19.0</div>
-<div class="line">30. <strong>Thunder 19.0</strong></div>
-<div class="line">30. Tucker 19.0</div>
-<div class="line">33. Bay City Rollers 18.5</div>
-<div class="line">33. Winning Jeff 18.5</div>
-<div class="line">35. Rapacke's Bracket 18.25</div>
-<div class="line">36. Adrian A 18.0</div>
-<div class="line">36. Pepper Bear 18.0</div>
-<div class="line">36. Sorbet 18.0</div>
-<div class="line">36. War Beaver 18.0</div>
-<div class="line">40. Coog Crew 17.75</div>
-<div class="line">40. Maui Girl 17.75</div>
-<div class="line">42. Escalante 17.5</div>
-<div class="line">42. <strong>Lightning 17.5</strong></div>
-<div class="line">42. Texas Big Red 17.5</div>
-<div class="line">45. Pooh Bear 17.25</div>
-<div class="line">45. Victorious Secret 17.25</div>
-<div class="line">47. <strong>GlamKam 16.75</strong></div>
-<div class="line">48. Batman 16.5</div>
-<div class="line">48. Go For Broke 16.5</div>
-<div class="line">48. Sgt. Pepper 16.5</div>
-<div class="line">51. Assistant Coach Riley? 16.25</div>
-<div class="line">51. Go For Bones 16.25</div>
-<div class="line">53. Blind Dog's Bluff 16.0</div>
-<div class="line">53. Kevin's bracket 16.0</div>
-<div class="line">53. YOLO Pups 16.0</div>
-<div class="line">56. Josh's Bracket 15.75</div>
-<div class="line">56. Nurse Ratched 15.75</div>
-<div class="line">58. Brothers before others 15.25</div>
-<div class="line">58. The Striker 15.25</div>
-<div class="line">60. Blindhog2017 15.0</div>
-<div class="line">60. Santa's Helper 15.0</div>
-<div class="line">60. <strong>Static 15.0</strong></div>
-<div class="line">63. hapagirl 14.75</div>
-<div class="line">63. Lucky in 2018 14.75</div>
-<div class="line">63. Warren Mooned Me 14.75</div>
-<div class="line">66. Duke Rules 14.25</div>
-<div class="line">66. Swampdonkey 14.25</div>
-<div class="line">68. West Coast Bias 14.0</div>
-<div class="line">69. <strong>D-Bo 13.75</strong></div>
-<div class="line">69. Julez 13.75</div>
-<div class="line">71. <strong>Em214 12.0</strong></div>
+<div class="line">6. I lost the password to my first bracket 23.75</div>
+<div class="line">6. Jake and the Neverland Pirates 23.75</div>
+<div class="line">6. UrbranLegend 23.75</div>
+<div class="line">9. beach lady 23.5</div>
+<div class="line">9. <strong>Bumblerooski 23.5</strong></div>
+<div class="line">9. The Pick Doctor 23.5</div>
+<div class="line">12. Bobbo 23.25</div>
+<div class="line">13. OSUX3 23.0</div>
+<div class="line">14. 4 Rackets 22.75</div>
+<div class="line">14. Make Bowl Season Great Again 22.75</div>
+<div class="line">14. War Eagle 22.75</div>
+<div class="line">14. Yoda 22.75</div>
+<div class="line">18. cutie pie 22.5</div>
+<div class="line">18. <strong>Eclipse 22.5</strong></div>
+<div class="line">20. Godiva Nine! 22.25</div>
+<div class="line">21. Still a Beaver Believer 21.75</div>
+<div class="line">22. Bevo's Best 21.5</div>
+<div class="line">22. Superman 21.5</div>
+<div class="line">22. Winning Jeff 21.5</div>
+<div class="line">25. Katyusha 21.25</div>
+<div class="line">25. Luck be a lady 21.25</div>
+<div class="line">25. MidWestWheat 21.25</div>
+<div class="line">25. <strong>Nerf Herder 21.25</strong></div>
+<div class="line">25. Santa Cruz Bill 21.25</div>
+<div class="line">30. Putin's Dog 21.0</div>
+<div class="line">30. <strong>Thunder 21.0</strong></div>
+<div class="line">30. Tucker 21.0</div>
+<div class="line">33. Rapacke's Bracket 20.25</div>
+<div class="line">34. Adrian A 20.0</div>
+<div class="line">34. Pepper Bear 20.0</div>
+<div class="line">34. Sorbet 20.0</div>
+<div class="line">37. Coog Crew 19.75</div>
+<div class="line">37. Maui Girl 19.75</div>
+<div class="line">39. <strong>#MamaBear 19.5</strong></div>
+<div class="line">39. Batman 19.5</div>
+<div class="line">39. Escalante 19.5</div>
+<div class="line">42. Victorious Secret 19.25</div>
+<div class="line">43. <strong>GlamKam 18.75</strong></div>
+<div class="line">44. Bay City Rollers 18.5</div>
+<div class="line">44. Go For Broke 18.5</div>
+<div class="line">46. Assistant Coach Riley? 18.25</div>
+<div class="line">47. Kevin's bracket 18.0</div>
+<div class="line">47. War Beaver 18.0</div>
+<div class="line">49. Josh's Bracket 17.75</div>
+<div class="line">49. Lucky in 2018 17.75</div>
+<div class="line">51. <strong>Lightning 17.5</strong></div>
+<div class="line">51. Texas Big Red 17.5</div>
+<div class="line">53. Brothers before others 17.25</div>
+<div class="line">53. Pooh Bear 17.25</div>
+<div class="line">53. The Striker 17.25</div>
+<div class="line">56. Santa's Helper 17.0</div>
+<div class="line">56. <strong>Static 17.0</strong></div>
+<div class="line">58. Julez 16.75</div>
+<div class="line">59. Sgt. Pepper 16.5</div>
+<div class="line">60. Go For Bones 16.25</div>
+<div class="line">60. Swampdonkey 16.25</div>
+<div class="line">62. Blind Dog's Bluff 16.0</div>
+<div class="line">62. YOLO Pups 16.0</div>
+<div class="line">64. Nurse Ratched 15.75</div>
+<div class="line">65. Blindhog2017 15.0</div>
+<div class="line">66. hapagirl 14.75</div>
+<div class="line">66. Warren Mooned Me 14.75</div>
+<div class="line">68. Duke Rules 14.25</div>
+<div class="line">69. <strong>Em214 14.0</strong></div>
+<div class="line">69. West Coast Bias 14.0</div>
+<div class="line">71. <strong>D-Bo 13.75</strong></div>
 </div>
 </div>
 </body>
