--- a/bowl_pool/2017-2018/results.html
+++ b/bowl_pool/2017-2018/results.html
@@ -2678,81 +2678,158 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>29</td>
+<td>Cotton Bowl</td>
+<td>Ohio State</td>
+<td>Southern Cal (USC)</td>
+<td>7.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td><strong>19.5</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>15.75</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>19.0</strong></td>
 <td><strong>18.25</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>21.75</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>23.5</strong></td>
 <td><strong>21.5</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>21.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>23.25</strong></td>
 <td><strong>17.25</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>18.0</strong></td>
-<td><strong>20.75</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>14.75</strong></td>
 <td><strong>14.0</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>19.75</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>16.0</strong></td>
 </tr>
 </tbody>
