--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-30 15:32:56</em></div>
-<div class="line"><em>Last bowl scored:  Fiesta Bowl (Penn State vs. Washington)</em></div>
+<div class="line"><em>Last updated:  2017-12-30 21:10:43</em></div>
+<div class="line"><em>Last bowl scored:  Orange Bowl (Wisconsin vs. Miami)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. The Water and The Well 29.25</div>
-<div class="line">2. Clutch City 27.0</div>
-<div class="line">3. Cowboy 26.75</div>
-<div class="line">4. UrbranLegend 26.5</div>
-<div class="line">5. Juul 25.5</div>
-<div class="line">5. Trojans 25.5</div>
-<div class="line">7. The Pick Doctor 24.75</div>
-<div class="line">8. Bobbo 24.5</div>
-<div class="line">9. Bevo's Best 24.25</div>
-<div class="line">9. Superman 24.25</div>
-<div class="line">11. 4 Rackets 24.0</div>
-<div class="line">11. Make Bowl Season Great Again 24.0</div>
-<div class="line">11. MidWestWheat 24.0</div>
-<div class="line">11. War Eagle 24.0</div>
-<div class="line">11. Yoda 24.0</div>
-<div class="line">16. cutie pie 23.75</div>
-<div class="line">16. <strong>Eclipse 23.75</strong></div>
-<div class="line">16. I lost the password to my first bracket 23.75</div>
-<div class="line">16. Jake and the Neverland Pirates 23.75</div>
-<div class="line">20. beach lady 23.5</div>
-<div class="line">20. <strong>Bumblerooski 23.5</strong></div>
-<div class="line">22. OSUX3 23.0</div>
-<div class="line">23. Winning Jeff 22.75</div>
-<div class="line">24. Santa Cruz Bill 22.5</div>
-<div class="line">25. <strong>#MamaBear 22.25</strong></div>
-<div class="line">25. Godiva Nine! 22.25</div>
-<div class="line">27. Still a Beaver Believer 21.75</div>
-<div class="line">28. Katyusha 21.25</div>
-<div class="line">28. Luck be a lady 21.25</div>
-<div class="line">28. <strong>Nerf Herder 21.25</strong></div>
-<div class="line">31. Assistant Coach Riley? 21.0</div>
-<div class="line">31. Pooh Bear 21.0</div>
-<div class="line">31. Putin's Dog 21.0</div>
-<div class="line">31. <strong>Thunder 21.0</strong></div>
-<div class="line">31. Tucker 21.0</div>
-<div class="line">36. War Beaver 20.75</div>
-<div class="line">37. Josh's Bracket 20.5</div>
-<div class="line">37. Lucky in 2018 20.5</div>
-<div class="line">39. <strong>GlamKam 20.25</strong></div>
-<div class="line">39. Rapacke's Bracket 20.25</div>
-<div class="line">39. Texas Big Red 20.25</div>
-<div class="line">42. Adrian A 20.0</div>
-<div class="line">42. Brothers before others 20.0</div>
-<div class="line">42. Pepper Bear 20.0</div>
-<div class="line">42. Sorbet 20.0</div>
-<div class="line">46. Coog Crew 19.75</div>
-<div class="line">46. Maui Girl 19.75</div>
-<div class="line">46. Santa's Helper 19.75</div>
-<div class="line">46. <strong>Static 19.75</strong></div>
-<div class="line">50. Batman 19.5</div>
-<div class="line">50. Escalante 19.5</div>
-<div class="line">52. Kevin's bracket 19.25</div>
-<div class="line">52. Victorious Secret 19.25</div>
-<div class="line">54. Blindhog2017 18.75</div>
-<div class="line">55. Bay City Rollers 18.5</div>
-<div class="line">55. Go For Broke 18.5</div>
-<div class="line">57. Go For Bones 17.75</div>
-<div class="line">57. Sgt. Pepper 17.75</div>
-<div class="line">59. Blind Dog's Bluff 17.5</div>
-<div class="line">59. <strong>Lightning 17.5</strong></div>
-<div class="line">61. The Striker 17.25</div>
-<div class="line">62. Duke Rules 17.0</div>
-<div class="line">62. Nurse Ratched 17.0</div>
-<div class="line">64. Julez 16.75</div>
-<div class="line">65. <strong>D-Bo 16.25</strong></div>
-<div class="line">65. Swampdonkey 16.25</div>
-<div class="line">67. hapagirl 16.0</div>
-<div class="line">67. YOLO Pups 16.0</div>
-<div class="line">69. <strong>Em214 15.5</strong></div>
-<div class="line">70. West Coast Bias 15.25</div>
-<div class="line">71. Warren Mooned Me 14.75</div>
+<div class="line">2. UrbranLegend 28.5</div>
+<div class="line">3. Trojans 27.5</div>
+<div class="line">4. Clutch City 27.0</div>
+<div class="line">5. Cowboy 26.75</div>
+<div class="line">5. The Pick Doctor 26.75</div>
+<div class="line">7. Bobbo 26.5</div>
+<div class="line">8. Bevo's Best 26.25</div>
+<div class="line">9. cutie pie 25.75</div>
+<div class="line">9. Jake and the Neverland Pirates 25.75</div>
+<div class="line">11. beach lady 25.5</div>
+<div class="line">11. Juul 25.5</div>
+<div class="line">13. Godiva Nine! 24.25</div>
+<div class="line">13. Superman 24.25</div>
+<div class="line">15. 4 Rackets 24.0</div>
+<div class="line">15. Make Bowl Season Great Again 24.0</div>
+<div class="line">15. MidWestWheat 24.0</div>
+<div class="line">15. War Eagle 24.0</div>
+<div class="line">15. Yoda 24.0</div>
+<div class="line">20. <strong>Eclipse 23.75</strong></div>
+<div class="line">20. I lost the password to my first bracket 23.75</div>
+<div class="line">20. Still a Beaver Believer 23.75</div>
+<div class="line">23. <strong>Bumblerooski 23.5</strong></div>
+<div class="line">24. Luck be a lady 23.25</div>
+<div class="line">25. OSUX3 23.0</div>
+<div class="line">25. Putin's Dog 23.0</div>
+<div class="line">25. <strong>Thunder 23.0</strong></div>
+<div class="line">25. Tucker 23.0</div>
+<div class="line">29. Winning Jeff 22.75</div>
+<div class="line">30. Lucky in 2018 22.5</div>
+<div class="line">30. Santa Cruz Bill 22.5</div>
+<div class="line">32. <strong>#MamaBear 22.25</strong></div>
+<div class="line">32. Rapacke's Bracket 22.25</div>
+<div class="line">32. Texas Big Red 22.25</div>
+<div class="line">35. Brothers before others 22.0</div>
+<div class="line">35. Pepper Bear 22.0</div>
+<div class="line">35. Sorbet 22.0</div>
+<div class="line">38. Santa's Helper 21.75</div>
+<div class="line">38. <strong>Static 21.75</strong></div>
+<div class="line">40. Katyusha 21.25</div>
+<div class="line">40. Kevin's bracket 21.25</div>
+<div class="line">40. <strong>Nerf Herder 21.25</strong></div>
+<div class="line">40. Victorious Secret 21.25</div>
+<div class="line">44. Assistant Coach Riley? 21.0</div>
+<div class="line">44. Pooh Bear 21.0</div>
+<div class="line">46. Blindhog2017 20.75</div>
+<div class="line">46. War Beaver 20.75</div>
+<div class="line">48. Bay City Rollers 20.5</div>
+<div class="line">48. Go For Broke 20.5</div>
+<div class="line">48. Josh's Bracket 20.5</div>
+<div class="line">51. <strong>GlamKam 20.25</strong></div>
+<div class="line">52. Adrian A 20.0</div>
+<div class="line">53. Coog Crew 19.75</div>
+<div class="line">53. Go For Bones 19.75</div>
+<div class="line">53. Maui Girl 19.75</div>
+<div class="line">56. Batman 19.5</div>
+<div class="line">56. Blind Dog's Bluff 19.5</div>
+<div class="line">56. Escalante 19.5</div>
+<div class="line">56. <strong>Lightning 19.5</strong></div>
+<div class="line">60. The Striker 19.25</div>
+<div class="line">61. Duke Rules 19.0</div>
+<div class="line">62. Julez 18.75</div>
+<div class="line">63. Swampdonkey 18.25</div>
+<div class="line">64. YOLO Pups 18.0</div>
+<div class="line">65. Sgt. Pepper 17.75</div>
+<div class="line">66. Nurse Ratched 17.0</div>
+<div class="line">67. Warren Mooned Me 16.75</div>
+<div class="line">68. <strong>D-Bo 16.25</strong></div>
+<div class="line">69. hapagirl 16.0</div>
+<div class="line">70. <strong>Em214 15.5</strong></div>
+<div class="line">71. West Coast Bias 15.25</div>
 </div>
 </div>
 </body>
