--- a/bowl_pool/2017-2018/results.html
+++ b/bowl_pool/2017-2018/results.html
@@ -2832,6 +2832,83 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>31</td>
+<td>Fiesta Bowl</td>
+<td>Penn State</td>
+<td>Washington</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+</tr>
 <tr><td>39</td>
 <td>Liberty Bowl</td>
 <td>Memphis</td>
@@ -2919,72 +2996,72 @@ ul.auto-toc {
 <td><strong>20.0</strong></td>
 <td><strong>21.0</strong></td>
 <td><strong>19.5</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>20.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>22.0</strong></td>
 <td><strong>23.5</strong></td>
 <td><strong>27.0</strong></td>
 <td><strong>19.75</strong></td>
 <td><strong>26.75</strong></td>
-<td><strong>23.75</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>16.25</strong></td>
-<td><strong>17.0</strong></td>
+<td><strong>19.0</strong></td>
 <td><strong>23.75</strong></td>
 <td><strong>15.5</strong></td>
 <td><strong>19.5</strong></td>
 <td><strong>20.25</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>22.25</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>24.25</strong></td>
 <td><strong>16.0</strong></td>
 <td><strong>23.75</strong></td>
-<td><strong>23.75</strong></td>
+<td><strong>25.75</strong></td>
 <td><strong>20.5</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>25.5</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>17.5</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>20.5</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>24.0</strong></td>
 <td><strong>19.75</strong></td>
 <td><strong>24.0</strong></td>
 <td><strong>17.0</strong></td>
 <td><strong>23.0</strong></td>
-<td><strong>20.0</strong></td>
+<td><strong>22.0</strong></td>
 <td><strong>21.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>20.25</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>22.25</strong></td>
 <td><strong>21.25</strong></td>
 <td><strong>22.5</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>19.75</strong></td>
 <td><strong>21.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>23.75</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>29.25</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>26.5</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>26.75</strong></td>
 <td><strong>19.25</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>20.75</strong></td>
 <td><strong>24.0</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>15.25</strong></td>
 <td><strong>22.75</strong></td>
 <td><strong>24.0</strong></td>
-<td><strong>16.0</strong></td>
+<td><strong>18.0</strong></td>
 </tr>
 </tbody>
 </table>
